# locallibrary

./: pyproject.toml  tox.ini
catalog/: models.py
catalog/migrations/: 0001_initial.py  0002_language_and_more.py
locallibrary/: settings.py  urls.py
